Make stuff preserve whitespace. Fix overflow.

--- a/static/style.css
+++ b/static/style.css
@@ -40,6 +40,9 @@
 .stuff-card-content {
 	width: 100%;
 	height: calc(100% - 2em);
+	overflow: hidden;
+	white-space: pre;
+	
 }
 
 
